created the foundation for this nonprofit website

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,11 +8,11 @@
       margin-left: 0;
     }
   
-    .services {
+    .involved {
       font-size: 30px;
     }
   
-    .ourServices, .portfolio {
+    .ourInvolved, .mission {
       margin: 0;
       padding: 0;
     }
